[package]
name = "yew-mdc"
version = "0.1.0"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"

[features]
default = [
    "button",
    "fab",
    "icon-button",
    "text-field",
    "menu",
    "drawer",
    "top-app-bar",
]
button = []
fab = []
icon-button = []
text-field = []
menu = []
drawer = []
top-app-bar = []

[dependencies]
yew = { version = "0.11", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
lazy_static = "*"
cfg-if = "0.1"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "Element",
    "Window",
    "Document",
    "Event",
]
