[package]
name = 'yew-mdc'
version = '0.1.0'
authors = ['Follpvosten <wolfi@karpador.xyz>']
edition = '2018'

[features]
default = [
    'button',
    'fab',
    'icon-button',
    'text-field',
    'menu',
    'drawer',
    'top-app-bar',
    'dialog',
    'card',
    'snackbar',
    'switch',
    'list',
    'slider',
    'data-table',
    'image-list',
    'tabs',
    'select',
    'list',
]
button = []
fab = []
icon-button = []
text-field = []
menu = []
drawer = []
top-app-bar = []
card = []
dialog = [
    'serde',
    'serde_json',
    'wasm-bindgen/serde-serialize',
]
snackbar = []
switch = []
list = []
slider = []
data-table = []
image-list = []
tabs = [
    'serde',
    'serde_json',
    'wasm-bindgen/serde-serialize',
]
select = []

[dependencies]
wasm-bindgen = '0.2'
js-sys = '0.3'
lazy_static = '*'
cfg-if = '0.1'
boolinator = '2.4.0'

[dependencies.yew]
version = '0.19.3'
default-features = false

[dependencies.serde]
version = '1'
optional = true

[dependencies.serde_json]
version = '1'
optional = true

[dependencies.web-sys]
version = '0.3'
features = [
    'Element',
    'Window',
    'Document',
    'Event',
    'CustomEvent',
    'EventTarget',
    'HtmlInputElement',
]

[dev-dependencies]
wasm-bindgen-test = '0.3'
futures = '0.3'
js-sys = '0.3'
wasm-bindgen-futures = '0.4'
